fix p element clipping within the description component

--- a/src/app/home/main-content/description/description.component.scss
+++ b/src/app/home/main-content/description/description.component.scss
@@ -62,3 +62,16 @@
         padding-left: 16px;
     }
 }
+
+@media only screen and (max-width: 900px) {
+    .description {
+        .underline {
+            padding-left: 2px;
+            background: none;
+        
+            p {
+                width: 90%;
+            }
+        }
+    }
+}
