--- a/src/app/home/main-content/image-popup/image-popup.component.scss
+++ b/src/app/home/main-content/image-popup/image-popup.component.scss
@@ -15,7 +15,7 @@
         width: fit-content;
         height: fit-content;
 
-        max-width: 60%;
+        max-width: 80%;
         background-color: transparent;
 
         border: 6px solid #A2EC48;
