--- a/src/app/home/main-content/main-content.component.scss
+++ b/src/app/home/main-content/main-content.component.scss
@@ -55,7 +55,7 @@
         flex-direction: column;
         justify-content: flex-start;
         margin-top: 120px;
-        width: 96%;
+        min-width: 100%;
         gap: 0px;
 
         overflow-y: auto;
@@ -65,7 +65,7 @@
             display: flex;
             flex-direction: column;
             width: fit-content;
-            max-width: 90%;
+            min-width: 90%;
             height: fit-content;
             overflow-y: auto;
             overflow-x: hidden;
@@ -83,6 +83,15 @@
             margin-bottom: 32px;
         }
     }
+
+    // ::-webkit-scrollbar-track {
+    //     background: rgba(0, 0, 0, 0);
+    //   }
+      
+    //   /* Handle */
+    //   ::-webkit-scrollbar-thumb {
+    //     background: rgba(0, 0, 0, 0);
+    //   }
 }
 
 @media only screen and (min-width: 901px) {
